--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
@@ -98,7 +98,7 @@
                                         </h:form>   
                                     </ul>
                                 </li>
-                                <li><a href="#contact" id="menu">Contact</a></li>
+                                <!--<li><a href="#contact" id="menu">Contact</a></li>-->
                                 <!-- Si la personne est déjà connectée on accède directement à l'espace perso sinon elle se connecte-->
                                 <c:choose>
                                     <c:when test="#{managerUser.user.id == null}">
